# OpenPharmaStability

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMC_ANALYTICS_POSITIONING.md  DESIGN.md  HANDOVER.md  HOSTED_ANALYSIS_BACKEND_PLAN.md  LICENSE  Makefile  NEXT_STEPS.md  OpenPharmaStability.dc.html  OpenPharmaStability.md  Q1_FINAL_GAP_ASSESSMENT_TEMPLATE.md  Q1_SEPTEMBER_2026_REVISED_DRAFT_DELTA.md  README.md  SESSION_SUMMARY_2026-07-17.md  UI_UX_AUDIT.md  design-qa.md  pyproject.toml
examples/: assay_3batch.csv  assay_3batch.expected.json  assay_accelerated_change_3_6mo.csv  assay_accelerated_change_lt_3mo.csv  assay_intermediate_change.csv  assay_intermediate_no_change.csv  assay_long_term.csv  bql_attribute.csv  data_quality_messy.csv  multi_attribute.csv  multi_attribute_metadata.csv
openpharmastability/: __init__.py  api.py  cli.py  contracts.py  ui_server.py  ui_service.py
site/: index.html
site-sample/: sample-report.html  sample-report.json
tools/: q1_watch_checklist.md  regen_expected.py  render-sample-pdf.mjs  sync-site.mjs  website-qa.mjs
validation/: conftest.py  test_api.py  test_arrhenius.py  test_arrhenius_shelf_life.py  test_artifacts.py  test_cli.py  test_cli_bql.py  test_contracts.py  test_data_bql.py  test_data_conditions.py  test_data_io.py  test_data_metadata.py  test_data_quality.py  test_data_schema.py  test_data_xlsx.py  test_diagnostics.py  test_edge_cases.py  test_engine.py  test_engine_v040.py  test_engine_v050.py  test_extrapolation.py  test_golden.py  test_limiting.py  test_mkt.py  test_multi_engine.py  test_multi_reporting.py  (+17 more)
(+53 files in other folders)
