[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openpharmastability"
version = "0.5.1"
description = "ICH Q1E-inspired stability analysis and shelf-life reporting toolkit (decision-support / educational; not a validated GxP system)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "OpenPharmaStability contributors" }]
keywords = ["pharma", "stability", "ich-q1e", "shelf-life", "regression", "statistics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "openpyxl>=3.1",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "matplotlib>=3.7",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.scripts]
openpharmastability = "openpharmastability.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["openpharmastability*", "validation*"]
exclude = ["examples*", "build*", "tests*", "*.tests*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["validation"]
addopts = "-ra -q"
filterwarnings = [
    "ignore::DeprecationWarning:statsmodels.*",
    "ignore::FutureWarning:statsmodels.*",
]
